--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(keep_noise)
 export(keep_z_above)
 export(keep_z_below)
 export(local_maximum)
+export(normalize)
 export(pit_fill)
 export(processor)
 export(rasterize)
