Add pipelines + doc

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ S3method(print,laslibfilter)
 export(add_extrabytes)
 export(boundaries)
 export(callback)
+export(chm)
 export(classify_isolated_points)
 export(drop_class)
 export(drop_duplicates)
@@ -17,6 +18,7 @@ export(drop_ground)
 export(drop_noise)
 export(drop_z_above)
 export(drop_z_below)
+export(dtm)
 export(filter_usage)
 export(keep_class)
 export(keep_first)
