--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,6 @@ S3method(print,LASRalgorithm)
 S3method(print,LASRpipeline)
 S3method(print,laslibfilter)
 export(add_extrabytes)
-export(boundaries)
 export(callback)
 export(chm)
 export(classify_isolated_points)
@@ -20,6 +19,7 @@ export(drop_z_above)
 export(drop_z_below)
 export(dtm)
 export(filter_usage)
+export(hulls)
 export(keep_class)
 export(keep_first)
 export(keep_ground)
