--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,12 +32,9 @@ export(pit_fill)
 export(processor)
 export(rasterize)
 export(reader)
-export(reader_dataframe_circles)
-export(reader_dataframe_coverage)
-export(reader_dataframe_rectangles)
-export(reader_files_circles)
-export(reader_files_coverage)
-export(reader_files_rectangles)
+export(reader_circles)
+export(reader_coverage)
+export(reader_rectangles)
 export(region_growing)
 export(sampling_pixel)
 export(sampling_voxel)
