--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,4 +42,5 @@ export(summarise)
 export(transform_with_triangulation)
 export(triangulate)
 export(write_las)
+export(write_vpc)
 useDynLib(lasR, .registration = TRUE)
