--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,7 +39,7 @@ export(region_growing)
 export(sampling_pixel)
 export(sampling_voxel)
 export(summarise)
-export(transform_with_triangulation)
+export(transform_with)
 export(triangulate)
 export(write_las)
 export(write_vpc)
