Number of cores

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(drop_z_above)
 export(drop_z_below)
 export(dtm)
 export(filter_usage)
+export(half_cores)
 export(hulls)
 export(keep_class)
 export(keep_first)
@@ -27,6 +28,7 @@ export(keep_noise)
 export(keep_z_above)
 export(keep_z_below)
 export(local_maximum)
+export(ncores)
 export(normalize)
 export(pit_fill)
 export(processor)
