try to use devel version of lidR

--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -23,7 +23,7 @@ jobs:
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          extra-packages: any::covr, any::lidR
+          extra-packages: any::covr, r-lidar/lidR
           needs: coverage
 
       - name: Test coverage
