--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,8 @@ export(add_extrabytes)
 export(callback)
 export(chm)
 export(classify_isolated_points)
+export(concurrent_files)
+export(concurrent_points)
 export(drop_class)
 export(drop_duplicates)
 export(drop_first)
@@ -40,6 +42,7 @@ export(reader_rectangles)
 export(region_growing)
 export(sampling_pixel)
 export(sampling_voxel)
+export(sequential)
 export(summarise)
 export(transform_with)
 export(triangulate)
