Handy tempfile functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,11 @@ export(region_growing)
 export(sampling_pixel)
 export(sampling_voxel)
 export(summarise)
+export(tempgpkg)
+export(templas)
+export(templaz)
+export(tempshp)
+export(temptif)
 export(transform_with)
 export(triangulate)
 export(write_las)
