change multithreading api + nested

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(drop_z_above)
 export(drop_z_below)
 export(dtm)
 export(filter_usage)
+export(get_lasr_strategy)
 export(half_cores)
 export(hulls)
 export(keep_class)
@@ -31,6 +32,7 @@ export(keep_z_above)
 export(keep_z_below)
 export(local_maximum)
 export(ncores)
+export(nested)
 export(normalize)
 export(pit_fill)
 export(processor)
@@ -43,6 +45,7 @@ export(region_growing)
 export(sampling_pixel)
 export(sampling_voxel)
 export(sequential)
+export(set_lasr_strategy)
 export(summarise)
 export(tempgpkg)
 export(templas)
