--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,7 +21,7 @@ export(drop_z_above)
 export(drop_z_below)
 export(dtm)
 export(filter_usage)
-export(get_lasr_strategy)
+export(get_parallel_strategy)
 export(half_cores)
 export(hulls)
 export(keep_class)
@@ -45,7 +45,7 @@ export(region_growing)
 export(sampling_pixel)
 export(sampling_voxel)
 export(sequential)
-export(set_lasr_strategy)
+export(set_parallel_strategy)
 export(summarise)
 export(tempgpkg)
 export(templas)
