New delete_points() stage

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(add_extrabytes)
 export(callback)
 export(chm)
 export(classify_isolated_points)
+export(delete_points)
 export(drop_class)
 export(drop_duplicates)
 export(drop_first)
