--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -27,7 +27,7 @@ jobs:
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          extra-packages: any::covr, r-lidar/lidR
+          extra-packages: any::covr, any::lidR
           needs: coverage
 
       - name: Test coverage
