--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(dtm)
 export(filter_usage)
 export(get_parallel_strategy)
 export(half_cores)
+export(has_omp_support)
 export(hulls)
 export(keep_class)
 export(keep_first)
