--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(drop_noise)
 export(drop_z_above)
 export(drop_z_below)
 export(dtm)
+export(exec)
 export(filter_usage)
 export(half_cores)
 export(hulls)
@@ -37,6 +38,10 @@ export(rasterize)
 export(reader)
 export(reader_circles)
 export(reader_coverage)
+export(reader_las)
+export(reader_las_circles)
+export(reader_las_coverage)
+export(reader_las_rectangles)
 export(reader_rectangles)
 export(region_growing)
 export(sampling_pixel)
