--- a/src/Makevars.in
+++ b/src/Makevars.in
@@ -2,6 +2,6 @@ PKG_CPPFLAGS= @PKG_CPPFLAGS@ -DNDEBUG -DUNORDERED -DHAVE_UNORDERED_MAP -DUSING_R
 PKG_CXXFLAGS = $(SHLIB_OPENMP_CXXFLAGS)
 PKG_LIBS=@PKG_LIBS@ $(SHLIB_OPENMP_CXXFLAGS)
 CXX_STD=CXX17
-SOURCES = $(wildcard LASlib/*.cpp LASzip/*.cpp LASR/*.cpp third_party/*.cpp ./*.cpp)
+SOURCES = $(wildcard LASlib/*.cpp LASzip/*.cpp LASR/*.cpp third_party/*/*.cpp ./*.cpp)
 TEMP1   = $(SOURCES:.cpp=.o)
 OBJECTS = $(TEMP1:.c=.o)
