set_exec_options

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,6 +52,7 @@ export(region_growing)
 export(sampling_pixel)
 export(sampling_voxel)
 export(sequential)
+export(set_exec_options)
 export(set_parallel_strategy)
 export(summarise)
 export(tempgpkg)
@@ -61,6 +62,7 @@ export(tempshp)
 export(temptif)
 export(transform_with)
 export(triangulate)
+export(unset_parallel_strategy)
 export(write_las)
 export(write_vpc)
 useDynLib(lasR, .registration = TRUE)
