lmf raster + redesign raster buffering

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ export(keep_noise)
 export(keep_z_above)
 export(keep_z_below)
 export(local_maximum)
+export(local_maximum_raster)
 export(ncores)
 export(nested)
 export(normalize)
