New stage load raster

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ export(keep_ground)
 export(keep_noise)
 export(keep_z_above)
 export(keep_z_below)
+export(load_raster)
 export(local_maximum)
 export(local_maximum_raster)
 export(ncores)
