--- a/NAMESPACE
+++ b/NAMESPACE
@@ -64,6 +64,7 @@ export(tempshp)
 export(temptif)
 export(transform_with)
 export(triangulate)
+export(unset_exec_option)
 export(unset_parallel_strategy)
 export(write_las)
 export(write_vpc)
