--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ S3method(print,LASRalgorithm)
 S3method(print,LASRpipeline)
 S3method(print,laslibfilter)
 export(add_extrabytes)
+export(add_rgb)
 export(callback)
 export(chm)
 export(classify_isolated_points)
