--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(drop_z_below)
 export(dtm)
 export(exec)
 export(filter_usage)
+export(geometry_features)
 export(get_parallel_strategy)
 export(half_cores)
 export(has_omp_support)
