--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,7 +26,7 @@ Suggests:
     terra,
     testthat (>= 3.0.0),
 RoxygenNote: 7.3.1
-SystemRequirements: GDAL (>= 2.0.1), PROJ (>= 4.8.0), GNU make, C++17
+SystemRequirements: C++17, GDAL (>= 2.2.3), GEOS (>= 3.4.0), PROJ (>= 4.9.3), sqlite3, GNU make
 Encoding: UTF-8
 Language: en-US
 Config/testthat/edition: 3
