remove some build

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -20,10 +20,10 @@ jobs:
       fail-fast: false
       matrix:
         config:
-          - {os: macos-latest,   r: 'oldrel'}
+          #- {os: macos-latest,   r: 'oldrel'} # does not have full c++17 support
           - {os: macos-latest,   r: 'release'}
-          - {os: macos-latest,   r: 'devel'}
-          - {os: windows-latest, r: 'oldrel'}
+          #- {os: macos-latest,   r: 'devel'}  # does not install units which is a dependency
+          #- {os: windows-latest, r: 'oldrel'} # does not have gdal??
           - {os: windows-latest, r: 'release'}
           - {os: windows-latest, r: 'devel'}
           - {os: ubuntu-latest,   r: 'oldrel'}
