--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,6 +56,7 @@ export(region_growing)
 export(sampling_pixel)
 export(sampling_voxel)
 export(sequential)
+export(set_crs)
 export(set_exec_options)
 export(set_parallel_strategy)
 export(summarise)
