--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,6 +54,7 @@ export(sequential)
 export(set_crs)
 export(set_exec_options)
 export(set_parallel_strategy)
+export(stop_if_outside)
 export(summarise)
 export(tempgpkg)
 export(templas)
