--- a/NAMESPACE
+++ b/NAMESPACE
@@ -66,5 +66,6 @@ export(triangulate)
 export(unset_exec_option)
 export(unset_parallel_strategy)
 export(write_las)
+export(write_lax)
 export(write_vpc)
 useDynLib(lasR, .registration = TRUE)
