--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,7 +18,8 @@ Depends: R (>= 3.6.0)
 Imports: 
     methods,
     utils,
-    stats
+    stats,
+    rjson
 Suggests: 
     knitr,
     rmarkdown,
