--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,8 +18,7 @@ Depends: R (>= 3.6.0)
 Imports: 
     methods,
     utils,
-    stats,
-    rjson
+    stats
 Suggests: 
     knitr,
     rmarkdown,
