--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(add_rgb)
 export(callback)
 export(chm)
 export(classify_isolated_points)
+export(classify_with_csf)
 export(concurrent_files)
 export(concurrent_points)
 export(delete_points)
