--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,8 +10,8 @@ export(add_extrabytes)
 export(add_rgb)
 export(callback)
 export(chm)
-export(classify_isolated_points)
 export(classify_with_csf)
+export(classify_with_ivf)
 export(concurrent_files)
 export(concurrent_points)
 export(delete_points)
