--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,6 +50,7 @@ export(reader_las_coverage)
 export(reader_las_rectangles)
 export(region_growing)
 export(sampling_pixel)
+export(sampling_poisson)
 export(sampling_voxel)
 export(sequential)
 export(set_crs)
