--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,6 +56,7 @@ export(sequential)
 export(set_crs)
 export(set_exec_options)
 export(set_parallel_strategy)
+export(sort_points)
 export(stop_if_outside)
 export(summarise)
 export(tempgpkg)
