--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ export(hulls)
 export(keep_class)
 export(keep_first)
 export(keep_ground)
+export(keep_ground_and_water)
 export(keep_noise)
 export(keep_z_above)
 export(keep_z_below)
