--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(callback)
 export(chm)
 export(classify_with_csf)
 export(classify_with_ivf)
+export(classify_with_sor)
 export(concurrent_files)
 export(concurrent_points)
 export(delete_points)
