New stage focal()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(drop_z_below)
 export(dtm)
 export(exec)
 export(filter_usage)
+export(focal)
 export(geometry_features)
 export(get_parallel_strategy)
 export(half_cores)
