--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ export(get_parallel_strategy)
 export(half_cores)
 export(has_omp_support)
 export(hulls)
+export(info)
 export(keep_class)
 export(keep_first)
 export(keep_ground)
