command line tools

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ export(half_cores)
 export(has_omp_support)
 export(hulls)
 export(info)
+export(install_cmd_tools)
 export(keep_class)
 export(keep_first)
 export(keep_ground)
