--- a/src/Makevars.in
+++ b/src/Makevars.in
@@ -1,6 +1,6 @@
 PKG_CPPFLAGS= @PKG_CPPFLAGS@ -DNDEBUG -DUSING_R -I./ -I./LASRcore/ -I./LASRstages/ -I./vendor/ -I./vendor/LASlib/ -I./vendor/LASzip/
 PKG_CXXFLAGS = $(SHLIB_OPENMP_CXXFLAGS)
-PKG_LIBS=@PKG_LIBS@ $(LAPACK_LIBS) $(BLAS_LIBS) $(FLIBS) $(SHLIB_OPENMP_CXXFLAGS)
+PKG_LIBS=@PKG_LIBS@ $(SHLIB_OPENMP_CXXFLAGS)
 CXX_STD=CXX17
 SOURCES = $(wildcard LASRcore/*.cpp LASRstages/*.cpp vendor/*/*.cpp ./*.cpp)
 TEMP1   = $(SOURCES:.cpp=.o)
