New hag() function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ export(filter_with_grid)
 export(focal)
 export(geometry_features)
 export(get_parallel_strategy)
+export(hag)
 export(half_cores)
 export(has_omp_support)
 export(hulls)
