--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,8 @@ export(classify_with_ivf)
 export(classify_with_sor)
 export(concurrent_files)
 export(concurrent_points)
+export(delete_ground)
+export(delete_noise)
 export(delete_points)
 export(drop_class)
 export(drop_duplicates)
