--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ S3method(c,LASRpipeline)
 S3method(print,LASRalgorithm)
 S3method(print,LASRpipeline)
 S3method(print,laslibfilter)
+S3method(print,lasrcloud)
 export(add_extrabytes)
 export(add_rgb)
 export(callback)
