--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method("+",LASRpipeline)
 S3method("+",laslibfilter)
 S3method(c,LASRpipeline)
+S3method(plot,lasrcloud)
 S3method(print,LASRalgorithm)
 S3method(print,LASRpipeline)
 S3method(print,laslibfilter)
