--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,6 +53,7 @@ export(nested)
 export(normalize)
 export(pit_fill)
 export(rasterize)
+export(read_cloud)
 export(reader_las)
 export(reader_las_circles)
 export(reader_las_coverage)
@@ -65,7 +66,6 @@ export(sequential)
 export(set_crs)
 export(set_exec_options)
 export(set_parallel_strategy)
-export(sort_points)
 export(stop_if_outside)
 export(summarise)
 export(tempgpkg)
