--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -47,7 +47,7 @@ jobs:
 
       - name: Install macOS system dependencies
         if: runner.os == 'macOS'
-        run: brew install gdal proj
+        run: brew install gdal proj sdl2 mesa mesa-glu
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
