--- a/src/Makevars.in
+++ b/src/Makevars.in
@@ -1,4 +1,4 @@
-PKG_CPPFLAGS= @PKG_CPPFLAGS@ -DNDEBUG -DUSING_R -I./ -I./LASRcore/ -I./LASRstages/ -I./LASRreaders/ -I./LASRviewer/ -I./vendor/ -I./vendor/LASlib/ -I./vendor/LASzip/ -I./vendor/ImGui/
+PKG_CPPFLAGS= @PKG_CPPFLAGS@ -DNDEBUG -DUSING_R -DIMGUI_DISABLE_TTY_FUNCTIONS -I./ -I./LASRcore/ -I./LASRstages/ -I./LASRreaders/ -I./LASRviewer/ -I./vendor/ -I./vendor/LASlib/ -I./vendor/LASzip/ -I./vendor/ImGui/
 PKG_CXXFLAGS = $(SHLIB_OPENMP_CXXFLAGS)
 PKG_LIBS=@PKG_LIBS@ $(SHLIB_OPENMP_CXXFLAGS)
 CXX_STD=CXX17
