--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,6 +45,7 @@ export(keep_ground_and_water)
 export(keep_noise)
 export(keep_z_above)
 export(keep_z_below)
+export(load_matrix)
 export(load_raster)
 export(local_maximum)
 export(local_maximum_raster)
