New stage write_copc

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -83,6 +83,7 @@ export(transform_with)
 export(triangulate)
 export(unset_exec_option)
 export(unset_parallel_strategy)
+export(write_copc)
 export(write_las)
 export(write_lax)
 export(write_vpc)
