--- a/NAMESPACE
+++ b/NAMESPACE
@@ -86,5 +86,6 @@ export(unset_parallel_strategy)
 export(write_copc)
 export(write_las)
 export(write_lax)
+export(write_pcd)
 export(write_vpc)
 useDynLib(lasR, .registration = TRUE)
