--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(drop_ground)
 export(drop_noise)
 export(drop_z_above)
 export(drop_z_below)
+export(dsm)
 export(dtm)
 export(exec)
 export(filter_with_grid)
