--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ export(drop_z_above)
 export(drop_z_below)
 export(dsm)
 export(dtm)
+export(edit_attribute)
 export(exec)
 export(filter_with_grid)
 export(focal)
