--- a/NAMESPACE
+++ b/NAMESPACE
@@ -66,6 +66,7 @@ export(reader_las_coverage)
 export(reader_las_rectangles)
 export(reader_rectangles)
 export(region_growing)
+export(remove_attribute)
 export(sampling_pixel)
 export(sampling_poisson)
 export(sampling_voxel)
