--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(drop_ground)
 export(drop_noise)
 export(drop_z_above)
 export(drop_z_below)
+export(drop_z_between)
 export(dsm)
 export(dtm)
 export(edit_attribute)
@@ -47,6 +48,7 @@ export(keep_ground_and_water)
 export(keep_noise)
 export(keep_z_above)
 export(keep_z_below)
+export(keep_z_between)
 export(load_matrix)
 export(load_raster)
 export(local_maximum)
