--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method("+",LASRpipeline)
 S3method("+",PipelinePtr)
 S3method("+",laslibfilter)
+S3method("[[",PipelinePtr)
 S3method(c,LASRpipeline)
 S3method(print,LASRalgorithm)
 S3method(print,LASRpipeline)
@@ -35,7 +36,6 @@ export(drop_z_between)
 export(dsm)
 export(dtm)
 export(edit_attribute)
-export(exec)
 export(filter_with_grid)
 export(focal)
 export(geometry_features)
@@ -61,6 +61,7 @@ export(local_maximum_raster)
 export(ncores)
 export(nested)
 export(normalize)
+export(old_exec)
 export(pit_fill)
 export(rasterize)
 export(read_cloud)
