--- a/.github/workflows/pylasr.yaml
+++ b/.github/workflows/pylasr.yaml
@@ -6,7 +6,7 @@ on:
       - 'src/**'
       - '.github/workflows/pylasr.yaml'
   pull_request:
-    branches: [ main, master, devel ]
+    branches: '**'
     paths:
       - 'python/**'
       - 'src/**'
