--- a/.github/workflows/pylasr.yaml
+++ b/.github/workflows/pylasr.yaml
@@ -68,7 +68,7 @@ jobs:
     - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install setuptools wheel numpy
+        pip install "setuptools>=64.0.0" wheel numpy pybind11 "cmake>=3.18"
 
     - name: Build Python extension
       working-directory: python
