--- a/.github/workflows/pylasr.yaml
+++ b/.github/workflows/pylasr.yaml
@@ -14,12 +14,12 @@ on:
   workflow_dispatch:
 
 jobs:
-  test:
+  test-unix:
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
-        os: ['ubuntu-latest', 'macos-latest', 'windows-latest' ]
+        os: ['ubuntu-latest', 'macos-latest']
         python-version: ['3.11', '3.12', '3.13']
         
     steps:
@@ -28,7 +28,6 @@ jobs:
         submodules: recursive
 
     - name: Set up Python ${{ matrix.python-version }}
-      if: runner.os != 'Windows'
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
@@ -53,8 +52,55 @@ jobs:
         brew update
         brew install libomp gdal geos proj sqlite3 tbb
 
-    - name: Setup MSYS2 and install dependencies on Windows
-      if: runner.os == 'Windows'
+    - name: Install Python dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install setuptools wheel numpy pybind11
+
+    - name: Configure pybind11 path
+      run: |
+        pybind11_DIR=$(python -c "import pybind11; print(pybind11.get_cmake_dir())")
+        echo "pybind11_DIR=$pybind11_DIR" >> $GITHUB_ENV
+
+    - name: Build extension
+      run: |
+        cd python
+        python setup.py build_ext --inplace -vvv
+        find . -name "*.so" | head -20
+
+    - name: Run tests
+      working-directory: python
+      run: |
+        # Add current directory to Python path to find the built module
+        export PYTHONPATH=$PWD:$PYTHONPATH
+        echo "PYTHONPATH=$PYTHONPATH"
+        
+        # Try importing pylasr directly first
+        python -c "import sys; print('Python path:', sys.path); import pylasr; print('pylasr imported successfully')" || echo "Failed to import pylasr"
+        
+        # Run the actual tests
+        python tests/run_tests.py
+
+    - name: Run quick smoke test
+      working-directory: python
+      run: |
+        # Add current directory to Python path to find the built module
+        export PYTHONPATH=$PWD:$PYTHONPATH
+        python tests/run_tests.py --quick
+
+  test-windows:
+    runs-on: windows-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: ['3.11', '3.12', '3.13']
+        
+    steps:
+    - uses: actions/checkout@v4
+      with:
+        submodules: recursive
+
+    - name: Setup MSYS2 and install dependencies
       uses: msys2/setup-msys2@v2
       with:
         msystem: MINGW64
@@ -71,14 +117,7 @@ jobs:
           mingw-w64-x86_64-python
           mingw-w64-x86_64-python-pip
 
-    - name: Install Python dependencies on Ubuntu/macOS
-      if: runner.os != 'Windows'
-      run: |
-        python -m pip install --upgrade pip
-        pip install setuptools wheel numpy pybind11
-
-    - name: Install Python packages on Windows
-      if: runner.os == 'Windows'
+    - name: Install Python packages
       shell: msys2 {0}
       run: |
         # Check Python version and install packages
@@ -87,28 +126,13 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install setuptools wheel numpy pybind11
 
-    - name: Configure pybind11 path on Ubuntu/macOS
-      if: runner.os != 'Windows'
-      run: |
-        pybind11_DIR=$(python -c "import pybind11; print(pybind11.get_cmake_dir())")
-        echo "pybind11_DIR=$pybind11_DIR" >> $GITHUB_ENV
-
-    - name: Configure pybind11 path on Windows
-      if: runner.os == 'Windows'
+    - name: Configure pybind11 path
       shell: msys2 {0}
       run: |
         pybind11_DIR=$(python -c "import pybind11; print(pybind11.get_cmake_dir())")
         echo "pybind11_DIR=$pybind11_DIR" >> $GITHUB_ENV
 
-    - name: Build extension on Ubuntu/macOS
-      if: runner.os != 'Windows'
-      run: |
-        cd python
-        python setup.py build_ext --inplace -vvv
-        find . -name "*.so" | head -20
-
-    - name: Build extension on Windows with MSYS2/MinGW
-      if: runner.os == 'Windows'
+    - name: Build extension with MSYS2/MinGW
       shell: msys2 {0}
       run: |
         cd python
@@ -142,22 +166,7 @@ jobs:
         
         find . -name "*.pyd" -o -name "*.dll" -o -name "*.so" | head -20
 
-    - name: Run tests on Ubuntu/macOS
-      if: runner.os != 'Windows'
-      working-directory: python
-      run: |
-        # Add current directory to Python path to find the built module
-        export PYTHONPATH=$PWD:$PYTHONPATH
-        echo "PYTHONPATH=$PYTHONPATH"
-        
-        # Try importing pylasr directly first
-        python -c "import sys; print('Python path:', sys.path); import pylasr; print('pylasr imported successfully')" || echo "Failed to import pylasr"
-        
-        # Run the actual tests
-        python tests/run_tests.py
-
-    - name: Run tests on Windows
-      if: runner.os == 'Windows'
+    - name: Run tests
       shell: msys2 {0}
       working-directory: python
       run: |
@@ -175,16 +184,7 @@ jobs:
         # Run the actual tests
         python tests/run_tests.py
 
-    - name: Run quick smoke test on Ubuntu/macOS
-      if: runner.os != 'Windows'
-      working-directory: python
-      run: |
-        # Add current directory to Python path to find the built module
-        export PYTHONPATH=$PWD:$PYTHONPATH
-        python tests/run_tests.py --quick
-
-    - name: Run quick smoke test on Windows
-      if: runner.os == 'Windows'
+    - name: Run quick smoke test
       shell: msys2 {0}
       working-directory: python
       run: |
